Fixed loading cover not covering when scrolling

--- a/www/style.css
+++ b/www/style.css
@@ -53,7 +53,7 @@ body {
 }
 
 #loading-content {
-  position: absolute;
+  position: fixed;
   background: #000000;
   opacity: 0.9;
   z-index: 9999;
